# unicycle-footstep-planner

include/: UnicyclePlanner.h
src/: UnicyclePlanner.cpp
tests/: CMakeLists.txt  DcmInterpolationOnInclinedPlaneTest.cpp  InterpolationTest.cpp  UnicycleOnInclinedPlaneTest.cpp
